# snake-rust-bevy-implementation

./: Cargo.toml  README.md  config.json  f  fA  n  nvim
main-app/: Cargo.toml
main-app/src/: bot_logic.rs  common.rs  constants.rs  endscreen.rs  game_logic.rs  main.rs  menu.rs  setup.rs  ui_handling.rs
player-api-lib/: Cargo.toml
player-api-lib/src/: lib.rs
rl-evo-train/: Cargo.toml
rl-evo-train/src/: data.rs  main.rs  model.rs  training.rs
snake-api-lib/: Cargo.toml
snake-api-lib/src/: api.rs  common.rs  lib.rs  prelude.rs  simulator.rs  snake.rs
