[workspace]
resolver = "2"
members = ["main-app", "rl-evo-train", "snake-api-lib"]


[profile.release]
opt-level = "s"  # Maximum optimization (0-3, or 's' for size, 'z' for minimal size)


[workspace.dependencies]
ndarray = { version = "*"}
rand = { version = "0.10.0-rc.6" }
strum = { version = "0.27.2", features = ["strum_macros"] }
strum_macros = "0.27.2"
itertools = "0.14.0"
