[workspace]
resolver = "2"
members = ["main-app", "rl-evo-train", "snake-api-lib"]


[profile.release]
opt-level = "s"  # Maximum optimization (0-3, or 's' for size, 'z' for minimal size)


[workspace.dependencies]
ndarray = { version = "*"}
rand = { version = "0.10.0-rc.6" }
strum = { version = "0.27.2", features = ["strum_macros"] }
itertools = "0.14.0"
burn = { version = "~0.19", features = ["std", "tui", "train", "vision", "wgpu", "fusion", "ndarray"], default-features = false }
