[package]
name = "main-app"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.2"
bevy_rand = { version = "0.12.1", features = ["wyrand", "rand_chacha"] }
bevy_smud = "0.12.0"
rand = { workspace = true }
rand_chacha = "0.9.0"
rand_core = "0.10.0-rc-3"
snake-api-lib = { path = "../snake-api-lib" }
burn = { workspace = true }
burn-ndarray = { version = "0.20.0-pre.6", features = ["blas-openblas"] }
rl-evo-train = { path = "../rl-evo-train" }
