[package]
name = "rl-evo-train"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "~0.19", features = ["std", "tui", "train", "vision", "wgpu", "fusion"], default-features = false }
snake-api-lib = { path = "../snake-api-lib" }
rand = { workspace = true }
strum = {workspace = true}
itertools = { workspace = true }
