[package]
name = "rl-evo-train"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { workspace = true }
snake-api-lib = { path = "../snake-api-lib" }
rand = { workspace = true ,features=["small_rng"] }
strum = {workspace = true}
itertools = { workspace = true }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tqdm = "0.8.0"
